test/typecheck/errors/complex-arrays2.boa
a2: array of stack of int;
